dynamic variable for header z index added and fixed map section z-index where maps small popup is overlaying over the header

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -42,3 +42,5 @@ $desktop-header-height: 74px;
 $mobile-header-height: 50px;
 
 $img-scale-on-hover: scale(1.04);
+
+$header-z-index: 10;
