--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -319,7 +319,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 11;
+    z-index: calc($header-z-index + 1);
     display: none;
 
     &--content {
