--- a/src/style/templates/_partner-with-us.scss
+++ b/src/style/templates/_partner-with-us.scss
@@ -313,6 +313,8 @@
     .map {
         height: 800px;
         border-top: 1px solid $blue;
+        position: relative;
+        z-index: 1;
 
         @media screen and (max-width: 768px) {
             height: auto;
